<resources>
    <string name="app_name">LibraryManagement</string>
    <string name="username_Text">Enter your username</string>
    <string name="password_Text">Enter your password</string>"
    <string name="confirm_password">Enter your confirm password</string>
    <string name="email_text">Enter your email</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register_text">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>