<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"/>
    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/guideline_1"
        android:textColor="@color/Dark_Blue"/>
    <EditText
        android:id="@+id/edt_Username_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username_Text"
        app:layout_constraintTop_toBottomOf="@id/title_register"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
        android:padding="20dp"
        android:textCursorDrawable="@null"
        />
    <EditText
        android:id="@+id/edt_password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_Username_txt"
        android:hint="@string/password_Text"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
        />
    <EditText
        android:id="@+id/edt_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email_text"
        app:layout_constraintTop_toBottomOf="@id/edt_password_txt"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/edt_confirm_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email_text"
        android:hint="@string/password_Text"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
        />
    <CheckBox
        android:id="@+id/checkbox_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password_text"
        app:layout_constraintStart_toStartOf="@id/edt_confirm_password_text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/Blue"
        android:text="Agree to Terms &amp; Conditions"
        android:buttonTint="@color/Blue"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox_terms_conditions"
        android:layout_marginTop="10dp"
        android:text="@string/btn_register_text"
        android:textColor="@color/white"
        android:background="@color/Blue"
        android:textSize="20sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>