<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"/>
    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        app:layout_constraintTop_toBottomOf="@id/guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="@color/Dark_Blue"
        />

    <EditText
        android:id="@+id/edt_Username_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username_Text"
        app:layout_constraintTop_toBottomOf="@id/title_login"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/edt_password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_Username_txt"
        android:hint="@string/password_Text"
        android:textColorHint="@color/Gray"
        android:textColor="@color/Dark_Gray"
        android:background="@drawable/customer_edit_text"
       />
    <TextView
        android:id="@+id/text_links_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        app:layout_constraintTop_toBottomOf="@id/edt_password_txt"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textColor="@color/Light_Blue"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/text_links_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register"
        app:layout_constraintTop_toBottomOf="@id/text_links_forgot_password"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/Light_Blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_links_register"
        android:layout_marginTop="10dp"
        android:text="@string/btn_login_text"
        android:textColor="@color/white"
        android:background="@color/Blue"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>